# crag

./: .env.example  .gitignore  CLAUDE.md  main.py  pyproject.toml
crag/: __main__.py  cli.py  utils.py
crag/config/: settings.py
crag/graph/: builder.py
crag/graph/nodes/: generator.py  grader.py  html_fetcher.py  query_rewriter.py  query_translator.py  retriever.py  web_search_decision.py  web_searcher.py
crag/models/: state.py
crag/vectorstore/: embeddings.py  store.py
crag/web/: search.py
docs/: sample.txt
scripts/: ingest_documents.py  run_crag.py
src/config/: settings.py
src/graph/: builder.py
src/graph/nodes/: generator.py  grader.py  html_fetcher.py  query_rewriter.py  retriever.py  web_searcher.py
src/models/: state.py
src/vectorstore/: embeddings.py  store.py
src/web/: scraper.py  search.py
