[project]
name = "crag"
version = "0.1.0"
description = "Corrective RAG system with LangGraph"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-openai>=0.2.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "duckduckgo-search>=6.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.12.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
